# kaspi_parser

./: .env  .env.docker  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  seed.json
alembic/: env.py
alembic/versions/: 2651f4aad1e8_add_price_and_offers_history.py  40ca76f7d69b_init.py  6ef0077b201d_add_sellers_count_field.py  8c34c8883f15_add_image_links_field_and_index_to_.py
app/: main.py
app/core/: db.py  dependencies.py  settings.py
app/models/: product.py
app/repositories/: repository.py
app/schemes/: parser.py  product.py
app/services/: parser_service.py  product_service.py
app/utils/: json_formatter.py
export/: offers.json  seed.json
